--- a/html/exercises/index.html
+++ b/html/exercises/index.html
@@ -9,8 +9,16 @@
   </head>
   <body>
     <!-- h1 goes here -->
+    <h1>Why I love Web Developement</h1>
     <!-- ol goes here -->
+    <ol>
+      <li>It's cool</li>
+      <li>It's nice</li>
+      <li>It feels good</li>
+    </ol>
     <!-- a goes here -->
+    <a href="https://education.launchcode.org/intro-to-web-dev-curriculum/html/exercises/index.html">Link to the page</a>
     <!-- p goes here -->
+    <p>I want to write a website about writing a website</p>
   </body>
 </html>
